--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
 h1{
   font-family: sans-serif;
   font-size: 36px;
+  text-align: center;
+}
+h2{
+  font-family: sans-serif;
+  font-size: 18px;
+  text-align: center;
+  color: #3c9664;
+}
+table{
+  width: 900px;
+  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+td{
+  background-color: #876384;
+}
+.guess{
+  width: 25%;
+  background-color: #b9ecd0;
+  text-align: center;
+  font-size: 16px;
+  font-family: sans-serif;
+  margin: 0 auto;
+  padding:10px;
+  list-style-type: none;
 }
