--- a/style.css
+++ b/style.css
@@ -28,3 +28,15 @@ td{
   padding:10px;
   list-style-type: none;
 }
+.guess:hover{
+  background-color: #9fe3bd;
+}
+.chosen-correct{
+  background-color: #10ff7b;
+  text-align: center;
+  font-size: 16px;
+  font-family: sans-serif;
+  margin: 0 auto;
+  padding:10px;
+  list-style-type: none;
+}
