--- a/style.css
+++ b/style.css
@@ -52,3 +52,13 @@ td{
   padding:10px;
   list-style-type: none;
 }
+.notChosen{
+  width: 25%;
+  background-color: #b9ecd0;
+  text-align: center;
+  font-size: 16px;
+  font-family: sans-serif;
+  margin: 0 auto;
+  padding:10px;
+  list-style-type: none;
+}
